# traact_component_basic

./: CMakeLists.txt  conanfile.py
include/traact/component/: InversionComponent.cpp
include/traact/component/featureless_outside_in/: FeaturelessOutsideInCameraInput.cpp  FeaturelessOutsideInModule.cpp  FeaturelessOutsideInModule.h  FeaturelessOutsideInTracking.cpp  FeaturelessOutsideInTrackingOutput.cpp
include/traact/component/render/: RenderImage.cpp  RenderModule.cpp  RenderModule.h  RenderPose6D.cpp  RenderPosition2DList.cpp
include/traact/component/spatial/util/: Pose6DTestSource.h
include/traact/component/tracking/: CircleTracking.cpp  EstimatePose.cpp
include/traact/component/vision/: DebugWindow.cpp  OpenCVArucoTracker.cpp  OpenCVModule.cpp  OpenCVModule.h  OpenCVUndistort2DPoints.cpp  OpenCVUndistortImage.cpp  OpenCvColorToGray.cpp  OpenCvConvertImage.cpp  OpenCvPaint2DPositionList.cpp  OpenCvVideoCapture.cpp  OpenCvWindow.cpp  SyncOpenCvMultiWindow.cpp
src/: VisionPlugin.cpp
src/component/: MultiplicationComponent.cpp  Pose6DPrint.cpp  Pose6DTestSource.cpp  PrintBodyList.h  StaticPose.cpp
src/traact/: traact_facade_export.h
src/traact/component/: InversionComponent.cpp
src/traact/component/facade/: SpatialApplicationComponent.cpp
src/traact/component/featureless_outside_in/: FeaturelessOutsideInCameraInput.cpp  FeaturelessOutsideInModule.cpp  FeaturelessOutsideInModule.h  FeaturelessOutsideInTracking.cpp  FeaturelessOutsideInTrackingOutput.cpp
src/traact/component/render/: RenderImage.cpp  RenderKeyPointList.cpp  RenderModule.cpp  RenderModule.h  RenderModuleComponent.cpp  RenderModuleComponent.h  RenderPose6D.cpp  RenderPosition2DList.cpp  RenderPosition3DList.cpp  traact_opengl.h
src/traact/component/spatial/: InversionComponent.cpp  Multiplication.cpp  MultiplicationPose6DPosition3DList.cpp  Pose6DPrint.cpp  StaticPose.cpp
src/traact/component/spatial/util/: Pose6DTestSource.h
src/traact/component/tracking/: BruteForceEstimatePose.cpp  CircleTracking.cpp  EstimatePose.cpp  FindTargetInPosition3DList.cpp  GatherCameraInitPose.cpp  OutsideInPointEstimation.cpp  OutsideInPoseEstimation.cpp  RefineCircles.cpp
src/traact/component/vision/: ApriltagTracker.cpp  DebugWindow.cpp  OpenCVModule.cpp  OpenCVModule.h  OpenCVUndistort2DPoints.cpp  OpenCVUndistortImage.cpp  OpenCvArucoTracker.cpp  OpenCvBlobDetection.cpp  OpenCvColorToGray.cpp  OpenCvConvertImage.cpp  OpenCvCudaConvertImage.cpp  OpenCvCudaCvtColor.cpp  OpenCvCudaDecode.cpp  OpenCvCudaDownload.cpp  OpenCvCudaEncode.cpp  OpenCvCudaUndistortImage.cpp  OpenCvCudaUpload.cpp  OpenCvGpuConvertImage.cpp  OpenCvGpuDecode.cpp  OpenCvGpuDownload.cpp  OpenCvGpuEncode.cpp  OpenCvGpuUndistortImage.cpp  OpenCvGpuUpload.cpp  OpenCvPaint2DPositionList.cpp  OpenCvUndistortImage.cpp  OpenCvVideoCapture.cpp  OpenCvWindow.cpp  SyncOpenCvMultiWindow.cpp  VisionGpuFunctions.cu  VisionGpuFunctions.cuh
